desenvolvimento da funcionalidade de consumo