@@ -1,20 +1,29 @@
 package com.megamanager.cliente.adapter.web;
 
+import java.net.URI;
+import java.util.List;
+
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
 import com.megamanager.cliente.adapter.web.dto.ClienteRequestDTO;
 import com.megamanager.cliente.adapter.web.dto.ClienteResponseDTO;
 import com.megamanager.cliente.adapter.web.mapper.ClienteDtoMapper;
-import com.megamanager.cliente.application.port.in.*;
+import com.megamanager.cliente.application.port.in.AtualizarClienteUseCase;
+import com.megamanager.cliente.application.port.in.BuscarClienteUseCase;
+import com.megamanager.cliente.application.port.in.CadastrarClienteUseCase;
+import com.megamanager.cliente.application.port.in.ExcluirClienteUseCase;
 import com.megamanager.cliente.domain.Cliente;
 
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
-
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
-
-import java.net.URI;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/clientes")
@@ -38,8 +47,7 @@ public class ClienteController {
     public ResponseEntity<List<ClienteResponseDTO>> listarTodos() {
         List<Cliente> clientes = buscarClienteUseCase.listarTodos();
         List<ClienteResponseDTO> response = clientes.stream()
-                .map(ClienteDtoMapper::toResponse)
-                .collect(Collectors.toList());
+                .map(ClienteDtoMapper::toResponse).toList();
         return ResponseEntity.ok(response);
     }
 
